--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,1 +1,50 @@
-<h1> Main Page </h1>
+<div class= "post_wrapper">
+
+  <div class="post">
+    <p id="title">TITLE</p>
+    <div id="post_content"></div>
+  </div>
+  <div class="post">
+    <p id="title">TITLE</p>
+  </div>
+  <div class="post">
+    <p id="title">TITLE</p>
+  </div>
+  <div class="post">
+    <p id="title">TITLE</p>
+  </div>
+  <div class="post">
+    <p id="title">TITLE</p>
+  </div>
+  <div class="post">
+    <p id="title">TITLE</p>
+  </div>
+  <div class="post">
+    <p id="title">TITLE</p>
+  </div>
+  <div class="post">
+    <p id="title">TITLE</p>
+  </div>
+  <div class="post">
+    <p id="title">TITLE</p>
+  </div>
+  <div class="post">
+    <p id="title">TITLE</p>
+  </div>
+  <div class="post">
+    <p id="title">TITLE</p>
+  </div>
+  <div class="post">
+    <p id="title">TITLE</p>
+  </div>
+  <div class="post">
+    <p id="title">TITLE</p>
+    <station id="content"></station>
+  </div>
+
+
+<h1>HACKER NEWS </h1>
+<p> Hacker news. Hacker News</p>
+<a href="#">Link Link Link</a>
+
+</div>
