--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,46 +1,94 @@
 <div class= "post_wrapper">
 
+  <!-- Begin Post -->
   <div class="post">
     <p id="title">TITLE</p>
     <div id="post_content"></div>
+    <div id="post_data">
+      <p id="data">Points |Comments |12:00pm  </p>
+    </div>
   </div>
+  <!-- End Post -->
+
+  <!-- Begin Post -->
   <div class="post">
     <p id="title">TITLE</p>
+    <div id="post_content"></div>
+    <div id="post_data">
+      <p id="data">Points |Comments |12:00pm  </p>
+    </div>
   </div>
+  <!-- End Post -->
+
+  <!-- Begin Post -->
   <div class="post">
     <p id="title">TITLE</p>
+    <div id="post_content"></div>
+    <div id="post_data">
+      <p id="data">Points |Comments |12:00pm  </p>
+    </div>
   </div>
+  <!-- End Post -->
+
+  <!-- Begin Post -->
   <div class="post">
     <p id="title">TITLE</p>
+    <div id="post_content"></div>
+    <div id="post_data">
+      <p id="data">Points |Comments |12:00pm  </p>
+    </div>
   </div>
+  <!-- End Post -->
+
+  <!-- Begin Post -->
   <div class="post">
     <p id="title">TITLE</p>
+    <div id="post_content"></div>
+    <div id="post_data">
+      <p id="data">Points |Comments |12:00pm  </p>
+    </div>
   </div>
+  <!-- End Post -->
+
+  <!-- Begin Post -->
   <div class="post">
     <p id="title">TITLE</p>
+    <div id="post_content"></div>
+    <div id="post_data">
+      <p id="data">Points |Comments |12:00pm  </p>
+    </div>
   </div>
+  <!-- End Post -->
+
+  <!-- Begin Post -->
   <div class="post">
     <p id="title">TITLE</p>
+    <div id="post_content"></div>
+    <div id="post_data">
+      <p id="data">Points |Comments |12:00pm  </p>
+    </div>
   </div>
+  <!-- End Post -->
+
+  <!-- Begin Post -->
   <div class="post">
     <p id="title">TITLE</p>
+    <div id="post_content"></div>
+    <div id="post_data">
+      <p id="data">Points |Comments |12:00pm  </p>
+    </div>
   </div>
+  <!-- End Post -->
+
+  <!-- Begin Post -->
   <div class="post">
     <p id="title">TITLE</p>
+    <div id="post_content"></div>
+    <div id="post_data">
+      <p id="data">Points |Comments |12:00pm  </p>
+    </div>
   </div>
-  <div class="post">
-    <p id="title">TITLE</p>
-  </div>
-  <div class="post">
-    <p id="title">TITLE</p>
-  </div>
-  <div class="post">
-    <p id="title">TITLE</p>
-  </div>
-  <div class="post">
-    <p id="title">TITLE</p>
-    <station id="content"></station>
-  </div>
+  <!-- End Post -->
 
 
 <h1>HACKER NEWS </h1>
