--- a/app/assets/stylesheets/hckrstyles.css
+++ b/app/assets/stylesheets/hckrstyles.css
@@ -1,12 +1,12 @@
 body {
   position: relative;
   margin: 0;
-  padding-top: 3%;
+  padding-top: 5%;
   color: #7C7C7C;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.231;
-  background: url(bg_repeat.png);
+  background: url(ricepaper2.jpg);
   background-color: #ffffff;
 }
 
@@ -33,7 +33,7 @@ div {
 }
 
 .navbar-inner {
-  background: #FF8B3D;
+  background: #ff6600;
   border: none;
   padding-left: 0;
   padding-right: 0;
@@ -48,8 +48,11 @@ div {
 }
 
 body > .post_wrapper {
-  margin: 45px auto;
   padding-left: 100px;
+  margin-top: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10%;
 }
 
 .post_wrapper > .post {
@@ -77,7 +80,7 @@ body > .post_wrapper {
   -webkit-border-radius: 3px 3px 0 0;
   border-radius: 3px 3px 0 0;
   font-size: 22px;
-  background-color: rgb(255, 174, 100);
+  background-color: #ff6600;
 }
 
 .post > #post_content {
@@ -91,15 +94,15 @@ body > .post_wrapper {
 
 .post > #post_data {
   position: absolute;
-  background: rgb(255, 174, 100);
+  background: #ff6600;
   width: 100%;
   margin: 0;
-  height: 10%;
+  height: auto;
 }
 
 p {
   font-size: 18px;
-  color: #303030;
+  color: #1A1A1A;
   font-family: 'Monda';
   margin-left: -1px;
 }
