--- a/app/assets/stylesheets/hckrstyles.css
+++ b/app/assets/stylesheets/hckrstyles.css
@@ -6,7 +6,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.231;
-  background: url(ricepaper2.jpg);
+  background: url();
   background-color: #ffffff;
 }
 
@@ -25,15 +25,16 @@ div {
 }
 .navbar-fixed-top, .navbar-inner {
   height: 50px;
-  color: orange;
-  -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.8);
-  -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 1px 10px rgba(143, 143, 143, 0.53);
+  color: #E37341;
+  border-bottom: 1px solid rgb(34, 34, 34);
+/*  -webkit-box-shadow: 0 1px 10px rgba(13, 187, 255, 0.8);
+  -moz-box-shadow: 0 1px 10px rgba(13, 187, 255, 0.8);
+  box-shadow: 0 1px 10px rgba(13, 187, 255, 0.4);*/
   z-index: 10000;
 }
 
 .navbar-inner {
-  background: #ff6600;
+  background: #33373B;
   border: none;
   padding-left: 0;
   padding-right: 0;
@@ -58,17 +59,17 @@ body > .post_wrapper {
 .post_wrapper > .post {
   position: relative;
   float: left;
-  width: 250px;
+  width: 325px;
   height: 250px;
   margin-left: auto;
   margin-right: 2.25%;
   margin-bottom: 2.75%;
   padding: 0;
-  -webkit-border-radius: 3px 3px 0 0;
-  border-radius: 3px 3px 0 0;
-  border: 1px solid rgba(160, 160, 160, 0.73);
-  background: rgba(223, 223, 223, 0.44);
-  box-shadow: 0 5px 6px rgba(194, 194, 194, 0.29);
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  /* border: 1px solid rgba(160, 160, 160, 0.73); */
+  background: #E37341;
+  box-shadow: 0 5px 6px rgba(192, 192, 192, 0.9);
   text-align: center;
 }
 
@@ -80,29 +81,32 @@ body > .post_wrapper {
   -webkit-border-radius: 3px 3px 0 0;
   border-radius: 3px 3px 0 0;
   font-size: 22px;
-  background-color: #ff6600;
+  background-color: #E37341;
 }
 
 .post > #post_content {
-  background-color: rgba(245, 245, 245, 0.8);
-  width: 100%;
+  background-color: #33373B;
+  width: 97%;
   height: 75%;
-  margin: 37px 0 0 0;
+  margin: 37px 0 0 5px;
   position: relative;
   z-index: 0;
+  border-radius: 3px;
 }
 
 .post > #post_data {
   position: absolute;
-  background: #ff6600;
+  background: #E37341;
   width: 100%;
   margin: 0;
   height: auto;
+  border-radius: 0 0 3px 3px;
+  -webkit-border-radius: 0 0 3px 3px;
 }
 
 p {
   font-size: 18px;
-  color: #1A1A1A;
+  color: #EBE8E3;
   font-family: 'Monda';
   margin-left: -1px;
 }
